<?xml version="1.0"?>
<package format="2">
  <name>pointpillar_ros</name>
  <version>0.0.1</version>
  <description>Use PointPillar with your ROS bags for object detection</description>
  <maintainer email="menghao.wu@alumni.aalto.fi">Menghao</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
